<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/agrosensex_claro"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="124dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/bienvenido"
        android:textColor="@color/agrosensex_oscuro"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/menu_navegacion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/menu_navegacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/agrosensex"
        app:menu="@menu/menu_navegacion"
        app:itemTextColor="@color/black"
        app:itemIconTint="@color/black"
        app:itemBackground="@android:color/transparent"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="340dp"
        android:layout_height="63dp"
        android:text="@string/elige"
        android:textAlignment="center"
        android:textColor="@color/agrosensex_oscuro"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/menu_navegacion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.311" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="410dp"
        android:layout_height="416dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logoinicio" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="299dp"
        android:layout_height="23dp"
        android:layout_marginBottom="64dp"
        android:text="@string/hecho"
        android:textAlignment="center"
        android:textColor="@color/agrosensex_oscuro"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>