<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/agrosensex_claro"
    tools:context=".SuarezFigueroa">

    <!-- TÍTULO -->
    <TextView
        android:id="@+id/textSF"
        android:layout_width="match_parent"
        android:layout_height="73dp"
        android:background="@color/agrosensex"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/textSF"
        android:textAlignment="center"
        android:gravity="center"
        android:textColor="@color/agrosensex_claro"
        android:textSize="48sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- IMAGEN INVERNADERO -->
    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="201dp"
        android:layout_height="216dp"
        android:layout_marginTop="85dp"
        android:background="@drawable/borde_imagen"
        android:contentDescription="@string/invernadero"
        android:scaleType="fitCenter"
        app:layout_constraintTop_toBottomOf="@id/textSF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@mipmap/invernadero_foreground" />

    <!-- TEXTO INVERNADERO -->
    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:text="@string/invernadero"
        android:textAlignment="center"
        android:gravity="center"
        android:textColor="@color/agrosensex_oscuro"
        android:textSize="34sp"
        app:layout_constraintTop_toBottomOf="@id/imageButton4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- IMAGEN ESTACIÓN -->
    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="201dp"
        android:layout_height="221dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/borde_imagen"
        android:contentDescription="@string/estacion"
        android:padding="12dp"
        android:scaleType="fitCenter"
        app:layout_constraintTop_toBottomOf="@id/textView5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@mipmap/estacion_foreground" />

    <!-- TEXTO ESTACIÓN -->
    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:text="@string/estacion"
        android:textAlignment="center"
        android:gravity="center"
        android:textColor="@color/agrosensex_oscuro"
        android:textSize="34sp"
        app:layout_constraintTop_toBottomOf="@id/imageButton5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- MENÚ INFERIOR -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/menu_info_atras"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/agrosensex"
        app:itemBackground="@android:color/transparent"
        app:itemIconTint="@color/black"
        app:itemTextColor="@color/black"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:menu="@menu/menu_info_atras" />

</androidx.constraintlayout.widget.ConstraintLayout>
