<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/agrosensex_claro"
    tools:context=".ArroyoHarnina">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/menu_info_atras"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/agrosensex"
        app:itemBackground="@android:color/transparent"
        app:itemIconTint="@color/black"
        app:itemTextColor="@color/black"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/menu_info_atras" />

    <TextView
        android:id="@+id/textAH"
        android:layout_width="415dp"
        android:layout_height="73dp"
        android:background="@color/agrosensex"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/textAH"
        android:textAlignment="center"
        android:textColor="@color/agrosensex_claro"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/menu_info_atras"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="238dp"
        android:layout_height="249dp"
        android:background="@color/agrosensex_claro"
        android:scaleType="fitCenter"
        android:contentDescription="@string/invernadero"
        app:layout_constraintBottom_toTopOf="@id/menu_info_atras"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textAH"
        app:layout_constraintVertical_bias="0.133"
        app:srcCompat="@mipmap/invernadero_foreground" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="327dp"
        android:layout_height="45dp"
        android:text="@string/invernadero"
        android:textAlignment="center"
        android:textColor="@color/agrosensex_oscuro"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.144" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="201dp"
        android:layout_height="221dp"
        android:layout_marginTop="336dp"
        android:background="@color/agrosensex_claro"
        android:scaleType="fitCenter"
        android:contentDescription="@string/estacion"
        app:layout_constraintBottom_toTopOf="@id/menu_info_atras"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textAH"
        app:layout_constraintVertical_bias="0.96"
        app:srcCompat="@mipmap/estacion_foreground" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="340dp"
        android:layout_height="63dp"
        android:text="@string/estacion"
        android:textAlignment="center"
        android:textColor="@color/agrosensex_oscuro"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.547" />
</androidx.constraintlayout.widget.ConstraintLayout>